content: Show blank when switching to a tab that navigated in background

If a background tab navigated, don't flash the contents of the old page
when showing it. Instead, show blank until we have content to show.

Bug: 671188
Change-Id: I774549428d34ba19c133c780b0c76d623e1b7a25
Reviewed-on: https://chromium-review.googlesource.com/929284
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538787}
Former-commit-id: c3a2996acf79195ec3b201d9f7a2685b561499e9